<resources>
    <string name="app_name">esWallet</string>
    <string name="hello">Добро пожаловать!</string>
    <string name="auth">Авторизация</string>
    <string name="reg">Регистрация</string>
    <string name="login">Логин</string>
    <string name="username">Имя</string>
    <string name="second_name">Фамилия</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="log_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="logout">Выйти</string>
    <string name="costs">Расходы</string>
    <string name="income">Доходы</string>
    <string name="day">День</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="year">Год</string>
    <string name="already_have_account">Уже зарегистрированы? Войти</string>
    <string name="error_empty_field">Данное поле должно быть заполнено</string>
    <string name="error_no_white_spaces">Пробелы не допускаются</string>
    <string name="error_invalid_email">Некорректный email</string>
    <string name="error_weak_password">Пароль слишком простой</string>
    <string name="error_password_are_not_match">Пароли не совпадают</string>
    <string name="error_too_long">Слишком много символов</string>
    <string name="error_wrong_password">Неверный пароль</string>
    <string name="error_wrong_login">Такого пользователя не существует</string>
    <string name="error_login_already_exists">Пользователь с таким логином уже существует</string>
    <string name="home">Главная</string>
    <string name="profile">Профиль</string>
    <string name="about">О программе</string>
    <string name="remainder">Остаток</string>
    <string name="current_remainder">Текущий остаток</string>
    <string name="new_remainder">Новый остаток</string>
    <string name="total_cost">Всего расходов</string>
    <string name="total_income">Всего доходов</string>
    <string name="new_record">Добавить операцию</string>
    <string name="sum">Сумма</string>
    <string name="add">Добавить</string>
    <string name="date">Дата</string>
    <string name="comment">Комментарий</string>
    <string name="ok">ОК</string>
    <string name="cancel">Отмена</string>

    <string name="transport">Транспорт</string>
    <string name="sport">Спорт</string>
    <string name="family">Семья</string>
    <string name="products">Продукты</string>
    <string name="gifts">Подарки</string>
    <string name="education">Обучение</string>
    <string name="cafe">Кафе</string>
    <string name="house">Дом</string>
    <string name="leisure">Досуг</string>
    <string name="health">Здоровье</string>
    <string name="texes">Налоги</string>
    <string name="serve">Услуги</string>
    <string name="penalties">Штрафы</string>
    <string name="auto">Авто</string>
    <string name="clothes">Одежда</string>
    <string name="medicine">Медицина</string>
    <string name="cosmetics">Косметика</string>
    <string name="job">Работа</string>
    <string name="debts">Долги</string>
    <string name="animals">Животные</string>
    <string name="other">Другое</string>
    <string name="percent">Проценты</string>
    <string name="salary">Зарплата</string>
    <string name="pt_job">Подработка</string>
    <string name="investments">Инвестиции</string>
    <string name="rent">Аренда</string>
    <string name="currency">Р</string>


    <string name="about_description">Приложение предназначено
        для учета личных расходов и доходов,
        а также оценки общего финансового состояния.
        Это отличный инструмент для желающих держать
        под контролем свои личные финансы.</string>

    <string name="about_what_does_it_do">Основные функции и особенности:</string>
    <string name="about_what_does_it_do_list_1">- планирование бюджета;</string>
    <string name="about_what_does_it_do_list_2">- посчет суммарных расходов и доходов;</string>
    <string name="about_what_does_it_do_list_3">- распределение по категориям на любой случай;</string>
    <string name="about_what_does_it_do_list_4">- фильтр по периоду времени;</string>
    <string name="about_what_does_it_do_list_5">- доступ к данным с любого устройства.</string>

    <string name="about_how_to_work">Как работать с приложением.</string>
    <string name="about_how_to_work_text1">Для начала необходимо зарегистрироваться и авторизоваться.
        Приложение запомнит пользователя и при следующем запуске
        приложения авторизация будет происходить автоматически </string>
    <string name="about_how_to_work_text2">
        Необходимо выбрать вид операции: расход или доход.
        В зависимости от выбора все сохраненные записи (если они есть) будут автоматически подгружается и отображается
        записи отображаются за определенный период: день, неделя, месяц, год.
        Если нажать на дату, то появится окно с выбором даты. </string>
    <string name="about_how_to_work_text3">Добавить операцию можно нажав на кнопку в правом нижнем углу экрана.
        в появившемся окне необходимо ввести сумму, выбрать категорию и дату операции.
        При необходимости можно добавить комментарий.
        Чтобы завершить создание записи нужно нажать на кнопке добавить.
        После этого созданная операция появится в списке. </string>
    <string name="about_how_to_work_text4">При необходимости можно удалить запись,
        нажав на крестик справа от нее.</string>
    <string name="about_made_by1">Приложение разработано в рамках курсовой работы по дисциплине
        "Интерфейсы информационных и автоматизированных систем"
        студентами Щербининым А.В., Колосовым И.С. Соломатиным А.А. </string>
    <string name="about_made_by2">ЛФ ПНИПУ группа ЭВТ-17-1б</string>
    <string name="about_made_by3">2020 год.</string>

</resources>