<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About"
    android:orientation="vertical">

    <!-- top bar -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="-30dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/coal"
        android:transitionName="trans_top_bar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">
            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:background="@mipmap/ic_arrow_back"/>
            <TextView
                android:id="@+id/tv_new_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_record"
                android:textColor="@color/bone"
                android:textSize="18sp"
                android:layout_toRightOf="@+id/btn_back"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <!-- content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/coal"
                android:textSize="32sp"
                android:textAlignment="center"
                android:paddingBottom="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_description"
                android:textColor="@color/coal"
                android:textSize="20sp"
                android:textAlignment="center"
                android:paddingBottom="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_what_does_it_do"
                android:textColor="@color/coal"
                android:textSize="24sp"
                android:textAlignment="center"
                android:paddingBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_what_does_it_do_list_1"
                android:textColor="@color/coal"
                android:textSize="20sp"
                android:textAlignment="viewStart"
                android:paddingBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_what_does_it_do_list_2"
                android:textColor="@color/coal"
                android:textSize="20sp"
                android:textAlignment="viewStart"
                android:paddingBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_what_does_it_do_list_3"
                android:textColor="@color/coal"
                android:textSize="20sp"
                android:textAlignment="viewStart"
                android:paddingBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_what_does_it_do_list_4"
                android:textColor="@color/coal"
                android:textSize="20sp"
                android:textAlignment="viewStart"
                android:paddingBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_what_does_it_do_list_5"
                android:textColor="@color/coal"
                android:textSize="20sp"
                android:textAlignment="viewStart"
                android:paddingBottom="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_how_to_work"
                android:textColor="@color/coal"
                android:textSize="24sp"
                android:textAlignment="center"
                android:paddingBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_how_to_work_text1"
                android:textColor="@color/coal"
                android:textSize="20sp"
                android:textAlignment="viewStart"
                android:paddingBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_how_to_work_text2"
                android:textColor="@color/coal"
                android:textSize="20sp"
                android:textAlignment="viewStart"
                android:paddingBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_how_to_work_text3"
                android:textColor="@color/coal"
                android:textSize="20sp"
                android:textAlignment="viewStart"
                android:paddingBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_how_to_work_text4"
                android:textColor="@color/coal"
                android:textSize="20sp"
                android:textAlignment="viewStart"
                android:paddingBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_made_by1"
                android:textColor="@color/coal"
                android:textSize="20sp"
                android:textAlignment="viewStart"
                android:paddingBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_made_by2"
                android:textColor="@color/coal"
                android:textSize="20sp"
                android:textAlignment="center"
                android:paddingBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_made_by3"
                android:textColor="@color/coal"
                android:textSize="20sp"
                android:textAlignment="center"
                android:paddingBottom="5dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
